2002-11-03  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/configdata.cc: Generalize the enum nick/value mapping code,
	and improve the error message strings.

2002-11-03  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/mainwindow.cc (on_hide): hide() the preferences dialog
	instead of deleting it, so that on_pref_dialog_hide() is executed
	to save the configuration data.

2002-11-03  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/configdata.{cc,h}: New files, implementing load/save of
	configuration data to a file.

	* src/Makefile.am: Add new files.
	* configure.ac: Check for umask() and its header files.

	* src/mainwindow.{cc,h}: Make use of the new code to load and
	save the configuration data.

	* src/stringutils.{cc,h} (trim_whitespace): New utility function.
	* src/prefdialog.cc (validate_encoding): Move to stringutils.{cc,h}.

2002-11-02  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/prefdialog.{cc,h}: Prevent double emission of
	signal_pref_toolbar_style_changed().

2002-10-31  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filelist.{cc,h} (find_files): Replace the pattern string
	argument with Pcre::Pattern& for consistency with find_matches().

	* src/mainwindow.cc (on_find_files): Construct the Pcre::Pattern
	for use with find_files().

2002-10-30  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filelist.{cc,h} (FileList::FindError): Store a list of
	strings instead of Glib::Error objects.  We don't need the extra
	information from Glib::Error, and plain strings gives us more
	flexibility with regards to message strings.

	* src/filelist.cc (save_current_file): Report errors to the caller
	using FileList::FileError exceptions.
	* src/filelist.cc (save_all_files): ditto.

	* src/mainwindow.{cc,h}: Generalize FindErrorDialog into
	FileErrorDialog and use it to report file saving errors too.

2002-10-29  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filelist.{cc,h} (FileList::FindError): Explicitly implement