@@ -1,5 +1,10 @@
 2002-11-03  Daniel Elstner  <daniel.elstner@gmx.net>
 
+	* src/configdata.cc: Use g_warning() instead of g_message().  These
+	errors don't occur on a normal setup and should really go to stderr.
+
+2002-11-03  Daniel Elstner  <daniel.elstner@gmx.net>
+
 	* src/configdata.cc: Generalize the enum nick/value mapping code,
 	and improve the error message strings.
 
